// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Braze's identifyUser destination action: all fields 1`] = `
Object {
  "aliases_to_identify": Array [
    Object {
      "external_id": "L6iTV8uKjdSaPxy2fjx9",
      "user_alias": Object {
        "alias_label": "L6iTV8uKjdSaPxy2fjx9",
        "alias_name": "L6iTV8uKjdSaPxy2fjx9",
      },
    },
  ],
}
`;

exports[`Testing snapshot for Braze's identifyUser destination action: it should work with a single batched events 1`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer my-api-key",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Testing snapshot for Braze's identifyUser destination action: it should work with a single batched events 2`] = `
Object {
  "aliases_to_identify": Array [
    Object {
      "external_id": "user1",
      "user_alias": Object {
        "alias_label": "foo",
        "alias_name": "bar",
      },
    },
  ],
}
`;

exports[`Testing snapshot for Braze's identifyUser destination action: it should work with batched events 1`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer my-api-key",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
    "x-braze-batch": Array [
      "true",
    ],
  },
}
`;

exports[`Testing snapshot for Braze's identifyUser destination action: it should work with batched events 2`] = `
Object {
  "aliases_to_identify": Array [
    Object {
      "external_id": "user1",
      "user_alias": Object {
        "alias_label": "foo",
        "alias_name": "bar",
      },
    },
    Object {
      "external_id": "user2",
      "user_alias": Object {
        "alias_label": "boo",
        "alias_name": "baz",
      },
    },
    Object {
      "external_id": "user3",
      "user_alias": Object {
        "alias_label": "foe",
        "alias_name": "fum",
      },
    },
  ],
}
`;

exports[`Testing snapshot for Braze's identifyUser destination action: required fields 1`] = `
Object {
  "aliases_to_identify": Array [
    Object {
      "external_id": "L6iTV8uKjdSaPxy2fjx9",
      "user_alias": Object {
        "alias_label": "L6iTV8uKjdSaPxy2fjx9",
        "alias_name": "L6iTV8uKjdSaPxy2fjx9",
      },
    },
  ],
}
`;
